--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
                     <div class="card__info">
                         <a class="card__title" href="#">Представительский люкс</a>
                         <p class="card__description">Эксклюзивный номер с панорамным видом на
-                            центр
-                            города Москвы</p>
+                            центр города Москвы</p>
                     </div>
                     <div class="card__booking">
                         <div class="card__booking-info">
