--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -42,8 +42,7 @@
                     <div class="card__info">
                         <a class="card__title" href="#">Представительский люкс</a>
                         <p class="card__description">Эксклюзивный номер с панорамным видом на
-                            центр
-                            города Москвы</p>
+                            центр города Москвы</p>
                     </div>
                     <div class="card__booking">
                         <div class="card__booking-info">
@@ -111,7 +110,7 @@
                 <div class="card__wrapper">
                     <div class="card__info">
                         <a class="card__title" href="#">Бизнес-люкс</a>
-                        <p class="card__description">Трехкомнатный номер с панорамным видом на Москва-реку</p>
+                        <p class="card__description">Трехкомнатный номер с панорамным видом на Москва&#8209;реку</p>
                     </div>
                     <div class="card__booking">
                         <div class="card__booking-info">
